Fixed body spacing

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: iz-viola
 */
 
-body {
+body, :root :where(body){
     padding: 0;
     margin: 0;
 }
